feat: Initialize application structure and styling
This commit sets up the basic HTML structure, adds essential CSS for layout and appearance, and organizes JavaScript imports. It also ensures that module paths are correctly specified for all imported components and utilities.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<script type="importmap">
-  {
-    "imports": {
-      "lit": "https://esm.sh/lit@^3.3.0",
-      "lit/": "https://esm.sh/lit@^3.3.0/",
-      "@lit/context": "https://esm.sh/@lit/context@^1.1.5",
-      "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
-      "three": "https://esm.sh/three@^0.176.0",
-      "three/": "https://esm.sh/three@^0.176.0/"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>closeais vai</title>
+  <link rel="stylesheet" href="index.css">
+  <script type="importmap">
+    {
+      "imports": {
+        "lit": "https://esm.sh/lit@^3.3.0",
+        "lit/": "https://esm.sh/lit@^3.3.0/",
+        "@lit/context": "https://esm.sh/@lit/context@^1.1.5",
+        "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
+        "three": "https://esm.sh/three@^0.176.0",
+        "three/": "https://esm.sh/three@^0.176.0/"
+      }
     }
-  }
-</script>
+  </script>
+</head>
 <body>
   <gdm-live-audio></gdm-live-audio>
+  <script type="module" src="./index.js"></script>
 </body>
+</html>
